# ray_buster

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dockerignore  LICENSE  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-ray_buster  bazel-testlogs  design.md  format-check.sh  format.sh  scenes.md  tidy.sh
.github/workflows/: docker-image.yml
include/: aabb.hpp  axis_aligned_rectangle.hpp  box.hpp  bvh.hpp  camera.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  material.hpp  moving_sphere.hpp  onb.hpp  pdf.hpp  perlin.hpp  ray.hpp  sphere.hpp  stb_image.h  texture.hpp  util.hpp  vec3.hpp
lib/: BUILD.bazel  collision.h  lina.cc  lina.h  vec3.h
lib/lina/: BUILD.bazel  lina.cc  lina.h  lina_test.cc  vec3.cc  vec3.h
lib/trace/: BUILD.bazel  camera.cc  camera.h  collision.h  component.h  lambertian.h  material.h  pdf.h  ray.cc  ray.h  scattering.h  transform.cc  transform.h  util.cc  util.h
lib/trace/geometry/: aabb.cc  aabb.h  component.cc  component.h  cuboid.cc  cuboid.h  cuboid_test.cc  icosphere.cc  icosphere.h  icosphere_test.cc  mesh.cc  mesh.h  mesh_limits.cc  mesh_limits.h  mesh_test.cc  plane.cc  plane.h  sphere.cc  sphere.h  sphere_test.cc  triangle.cc  triangle.h  triangle_data.cc  triangle_data.h  vertex_data.h
lib/trace/material/: dielectric.cc  dielectric.h  emissive.cc  emissive.h  lambertian.cc  lambertian.h  metal.cc  metal.h
main/: BUILD.bazel  ray_buster.cc
main/render/: linear_partition.cc  linear_partition.h  pixel_partition.cc  pixel_partition.h  voxel_space.cc  voxel_space.h  voxel_space_test.cc
main/scenes/: scene.cc  scene.h  scene_settings.cc  scene_settings.h
main/scenes/collection/: cornell_box.cc  cornell_box.h  floating_sphere.cc  floating_sphere.h
main/scenes/test/: cuboid.cc  cuboid.h  icosphere.cc  icosphere.h  plane.cc  plane.h  sphere.cc  sphere.h
vector/: BUILD.bazel  hello_test.cc  vector.h
