cc_binary(
    name = "ray_buster",
    srcs = [
            "ray_buster.cc",
    ],
    deps = [":scenes", ":render"],
)

cc_library(
    name = "render",
    srcs = [
            "render/linear_partition.cc",
    ],
    hdrs = [
            "render/linear_partition.h",
    ],
    deps = ["//lib/lina:lina", "//lib/trace:trace", ":scenes"],
)

cc_library(
    name = "scenes",
    srcs = [
            "scenes/collection/cornell_box.cc",
            "scenes/scene.cc",
            "scenes/scene_settings.cc",
            "scenes/test/cuboid.cc",
            "scenes/test/plane.cc",
            "scenes/test/sphere.cc",
    ],
    hdrs = [
            "scenes/collection/cornell_box.h",
            "scenes/scene.h",
            "scenes/scene_settings.h",
            "scenes/test/cuboid.h",
            "scenes/test/plane.h",
            "scenes/test/sphere.h",
    ],
    deps = ["//lib/lina:lina", "//lib/trace:trace"],
)
