
cc_library(
    name = "trace",
    srcs = [
            "geometry/component.cc",
            "geometry/cuboid.cc",
            "geometry/plane.cc",
            "geometry/sphere.cc",
            "geometry/triangle.cc",
            "material/dielectric.cc",
            "material/emissive.cc",
            "material/lambertian.cc",
            "material/metal.cc",
            "camera.cc",
            "util.cc",
            "ray.cc",
            "transform.cc",
            ],
    hdrs = [
            "geometry/component.h",
            "geometry/cuboid.h",
            "geometry/plane.h",
            "geometry/sphere.h",
            "geometry/triangle.h",
            "geometry/triangle_data.h",
            "material/dielectric.h",
            "material/emissive.h",
            "material/lambertian.h", 
            "material/metal.h", 
            "camera.h",
            "collision.h",
            "material.h",
            "util.h",
            "pdf.h",
            "ray.h",
            "scattering.h",
            "transform.h",
            ],
    visibility=["//main:__pkg__"],
    deps = ["//lib/lina:lina"],
)
